src/assets/style/screen.css
/* General */
body {
	background: #424242 url('bg.jpg') no-repeat top left;
	margin: 1rem;
	padding: 0;
	font-family: ui-sans-serif, system-ui, sans-serif;
	color: #ffffff;
}

p {
	margin: 0 0 1.2em 0;
}

ul, ol, dl {
	margin: 0 0 0.5em 0;
	padding: 0;
}

li {
	margin: 0 0 0.7em 3em;
	padding: 0;
}

p, li, pre {
	line-height: 1.4;
}

h2 {
	font-size: 1.5em;
	font-family: "Trebuchet MS", "Verdana", sans-serif;
	font-weight: normal;
	text-shadow: #000000 0 1px 6px;
	padding: 0 0 0.1em 0;
	margin: 0 0 0.3em 0;
	border-bottom: 1px solid #b6e4ff;
}

h3 {
	font-size: 1.3em;
	font-family: "Trebuchet MS", "Verdana", sans-serif;
	font-weight: normal;
	text-shadow: #000000 0 1px 6px;
	padding: 0 0 0.1em 0;
	margin: 0 0 0.3em 0;
	border-bottom: 1px dotted #b6e4ff;
}

a {
	color: #b6e4ff;
}

a:visited {
	color: #ed7de4;
}

a:hover, a:active {
	color: #ffffff;
}

hr {
  border: none;
  background-color: #b6e4ff;
  height: 1px;
}

code {
  font-size: 1.25em;
}

figure {
  margin: 0 0 1.2em 0;
}

figcaption {
  text-align: center;
  font-size: smaller;
}

.break {
	clear: both;
}


/* Header */
#header .page-title {
  box-sizing: border-box;
  text-shadow: #000000 0 1px 6px;
	padding: calc(20px - 1rem) 0 0 calc(146px - 0.5rem);
	margin: 0 0 0.5rem 0;
  background: url('home.jpg') no-repeat calc(20px - 1rem) calc(20px - 1rem);
	min-height: 126px;
}

#header h1 {
	margin: 0;
	font-size: 2em;
	font-family: "Trebuchet MS", "Verdana", sans-serif;
	font-weight: bold;
}

/* Main content */

div.box {
	margin: 0 0 1rem 0;
	padding: 0.5rem;
	border-radius: 1em;
	background: #434343 url('boxbg.jpg') no-repeat 50% 0;
}

#secondary-content h2 {
	border-bottom: 1px solid #ed7de4;
}

#secondary-content h3 {
	border-bottom: 1px dotted #ed7de4;
}

/* Footer */
#footer {
	/* layout */
	clear: both;
	margin: 2rem 0 1rem 0;
	padding: 5px 0 0 0;
	border-top: 1px solid #b6e4ff;
}

#footer p {
	font-size: 0.7em;
}

/* Nav links */
#navigation {
	/* layout */
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
	list-style-type: none;
	padding: 0;
	margin: 0 0 1rem;
}

#navigation li {
	display: block;
	box-sizing: border-box;
	width: calc(50% - 0.5rem);
	padding: 0;
	margin: 0.5rem 0;
	text-align: center;
}

#navigation a,
#navigation span {
	display: block;
	padding: 2px 0.5rem;
	margin: 0;
	text-decoration: none;
	font-size: 1.5em;
	font-family: "Trebuchet MS", "Verdana", sans-serif;
	text-shadow: #000000 0 1px 6px;
}

#navigation a,
#navigation a:visited {
	color: #b6e4ff;
	border-bottom: 2px dotted #b6e4ff;
}

#navigation a:hover,
#navigation a:active {
	color: #ffffff;
	border-bottom: 2px dotted #ffffff;
}

#navigation span {
	color: #ffffff;
	border-bottom: 2px solid #b6e4ff;
}


/* Fancy link lists */
.social,
#main-content .galleries {
	margin-bottom: 0;
}

.social li,
#main-content .galleries li {
	display: block;
	padding: 0;
	margin: 0 0 1em 0;
}


/* Blog post content */
.post img {
  display: block;
  max-width: 100%;
  margin: 0 auto 1em;
}

.post figure img {
  margin-bottom: 0.5em;
}

/* Links to blog post with title, date and summary */
.post-link :last-child {
  margin-bottom: 0;
}

.post-link__title {
  font-size: 1.3em;
  line-height: 1.25;
}

.post-link__date {
  display: block;
  margin-top: 0.25rem;
  margin-bottom: 0.5rem;
}

/* List of post links */
.post-links {
  list-style-type: none;
  margin: 1rem 0;
}

.post-links li {
  margin: 0;
}

.post-links li + li {
  margin-top: 1rem;
  padding-top: 1rem;
  border-top: 1px solid #aaa;
}

/* Links with button-like appearance */
.big-link {
  display: block;
  padding: 0.25rem;
  margin: 1rem 0;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.5rem;
  text-decoration: none;
  background-color: #424242;
}

span.big-link {
  color: #aaa;
}


/* Individual archive nav link */
.archive-nav-link__dirLabel,
.archive-nav-link__label {
  display: block;
}

.archive-nav-link__dirLabel {
  font-size: 0.7em;
}


/* Archive navigation links */
.archive-nav {
  margin: 0 0 1rem -1rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.archive-nav > * {
  flex-grow: 1;
  margin: 1rem 0 0 1rem;
}

.archive-nav__up {
  width: 100%;
  text-align: center;
}

.archive-nav__backwards,
.archive-nav__forwards {
  flex-basis: calc(50% - 1rem);
  display: flex;
  flex-direction: column;
  margin: 0;
}

.archive-nav__backwards > *,
.archive-nav__forwards > * {
  position: relative;
  flex-grow: 1;
  margin: 1rem 0 0 1rem;
}

.archive-nav__backwards {
  flex-direction: column-reverse;
}

.archive-nav__backwards .archive-nav-link {
  padding-left: 2rem;
}

.archive-nav__forwards {
  text-align: right;
}

.archive-nav__forwards .archive-nav-link {
  padding-right: 2rem;
}

.archive-nav__backwards .archive-nav-link::before,
.archive-nav__forwards .archive-nav-link::after {
  display: block;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.archive-nav__prev::before {
  content: '<';
  left: 0.25rem;
}

.archive-nav__first::before {
  content: '<<';
  left: 0.25rem;
}

.archive-nav__next::after {
  content: '>';
  right: 0.25rem;
}

.archive-nav__last::after {
  content: '>>';
  right: 0.25rem;
}



@media screen and (min-width: 550px) {

	/* Navigation */
	#navigation li {
		width: calc((100% - 3rem) / 4);
	}

	/* Fancy link lists */
	.social,
	#main-content .galleries {
		display: flex;
		justify-content: space-between;
		flex-wrap: wrap;
	}

	.social li,
	#main-content .galleries li {
		width: calc(50% - 0.5rem);
	}
}



@media screen and (min-width: 800px) {

  /* HEADER */
  #header .page-title {
		padding-top: 60px;
  }

	#header h1 {
		font-size: 2.5em;
	}


	/* Main content */
	#main-content {
		width: 65%;
		float: left;
	}

	#secondary-content {
		width: calc(35% - 1rem);
		float: right;
	}

}

@media screen and (min-width: 960px) {

	body {
		padding-left: calc(160px - 1rem);
	}

	/* HEADER */
	#header {
		margin: 0 0 40px 0;
	}

	#header .page-title {
		padding-left: 0;
		background: none;
		min-height: inherit;
	}

	/* Navigation */
	#navigation {
		position: absolute;
		display: block;
		top: 20px;
		left: 20px;
		width: 120px;
	}

	#navigation li {
		width: 100%;
		margin: 0 0 1rem 0;
		text-align: left;
	}

	#navigation .home {
		background: url('home.jpg') no-repeat top left;
		padding-top: 126px;
	}

}

